--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-native": "0.64.0",
     "react-native-background-image": "^1.0.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-material-ripple": "^0.9.1",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-share": "^5.2.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^8.1.0",
