--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.3.1",
-    "@react-native-firebase/auth": "^11.3.1",
+    "@react-native-firebase/auth": "^11.3.2",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-background-image": "^1.0.2",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-material-ripple": "^0.9.1",
     "react-native-paper": "^4.7.2",
