--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^11.3.1",
-    "@react-native-firebase/auth": "^11.3.2",
+    "@react-native-firebase/app": "^11.4.1",
+    "@react-native-firebase/auth": "^11.4.1",
+    "@react-native-firebase/database": "^11.4.1",
+    "@react-native-firebase/storage": "^11.4.1",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -22,6 +25,7 @@
     "react-native": "0.64.0",
     "react-native-background-image": "^1.0.2",
     "react-native-check-box": "^2.1.7",
+    "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-material-ripple": "^0.9.1",
     "react-native-paper": "^4.7.2",
@@ -31,8 +35,10 @@
     "react-native-share": "^5.2.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-progressive-bg-image": "^3.0.0"
+    "react-progressive-bg-image": "^3.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
